examples/test/testpolicy2400.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2400
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key25: value20
      key6: value44
      key11: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value10
      podSelector:
        matchLabels:
          key36: value30
          key23: value26
